--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="index.js"></script>
     <meta charset="UTF-8">
     <title>Portail Ephec Upgraded</title>
 </head>
+
 <body>
-<h2>This is a new version of the portal</h2>
-<p>Coding is cool</p>
-<button type="button" onclick="clicked();">Click Me!</button>
+    <!--header avec un titre + div ? + img ??-->
+    <header>
+        <h2>This is a new version of the portal</h2>
+        <p>Coding is cool</p>
+        <!--button type="button" onclick="clicked();">Click Me!</button>-->
+    </header>
+    <!--div reserver pour le millieur avec une sous div pour centrer-->
+    <div class="div1">
+        <fieldset id="field1">
+            <legend>Cours et administratif</legend>
+        </fieldset id="field2">
+        <fieldset>
+            <legend>Outils Microsoft</legend>
+        </fieldset>
+    </div>
+    <div class="div2">
+        <fieldset id="field3">
+            <legend>Réseau</legend>
+        </fieldset id="field4">
+        <fieldset>
+            <legend>Formations (internet)</legend>
+        </fieldset>
+    </div>
+
+    <!--un footer (bas de page)-->
+    <footer>Site made by Morgan Valentin</footer>
+
 </body>
+
 </html>
