--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
             <legend>Formations (internet)</legend>
         </fieldset>
     </div>
+    <div class="div3">
+        <fieldset id="field4">
+            <legend>Liens Utiles</legend>
+    </div>
 
     <!--un footer (bas de page)-->
-    <footer>Site made by Morgan Valentin</footer>
+    <footer>Site made by <i>Morgan Valentin</i>.</footer>
 
 </body>
 
