--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <header>
         <h2>This is a new version of the portal</h2>
         <p>Coding is cool</p>
+        <figure>
+            <img src="pic1.jpg" alt="test" height="100" width="100">
+            <figcaption>Legende</figcaption>
+        </figure>
         <!--button type="button" onclick="clicked();">Click Me!</button>-->
     </header>
     <!--div reserver pour le millieur avec une sous div pour centrer-->
