--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 </head>
 
 <body>
-    <!--header avec un titre + div ? + img ??-->
     <header>
-        <h2>This is a new version of the portal</h2>
-        <p>Coding is cool</p>
-        <figure>
-            <img src="pic1.jpg" alt="test" height="100" width="100">
-            <figcaption>Legende</figcaption>
-        </figure>
-        <!--button type="button" onclick="clicked();">Click Me!</button>-->
+        <img id="logo" src="/img/ephec.png" />
+        <h2><span class="special">"New"</span> Portail des applications (et autres encore...)</h2>
     </header>
     <!--div reserver pour le millieur avec une sous div pour centrer-->
     <div class="div1">
         <fieldset id="field1">
             <legend>Cours et administratif</legend>
+            <a href="https://eperso.ephec.be">
+                <img id="eperso" src="/img/eperso.png" height="150" width="250" /></a>
+            <a href="https://moodle.ephec.be/">
+                <img id="moodle" src="/img/moodle.png" height="150" width="250" /></a>
         </fieldset id="field2">
         <fieldset>
             <legend>Outils Microsoft</legend>
+            <a href="https://outlook.office365.com/owa/?realm=ephec.be#path=/mail">
+                <img id="outlook" src="/img/mail.png" height="150" width="250" /></a>
+            <a href="https://ephec-my.sharepoint.com/">
+                <img id="onedrive" src="/img/onedrive.png" height="150" width="250" /></a>
         </fieldset>
     </div>
     <div class="div2">
         <fieldset id="field3">
             <legend>Réseau</legend>
+            <a href="https://www.netacad.com/">
+                <img id="cisco" src="/img/cisco.png" height="120" width="150" /></a>
+            <a href="https://itexamanswers.net/ccna-4-v6-0-study-material-chapter-1-wan-concepts.html">
+                <img id="cisco2" src="/img/cisco2.png" height="100" width="200" /></a>
         </fieldset id="field4">
         <fieldset>
             <legend>Formations (internet)</legend>
@@ -42,7 +48,7 @@
     </div>
 
     <!--un footer (bas de page)-->
-    <footer>Site made by <i>Morgan Valentin</i>.</footer>
+    <footer>Site made by <span class="special">Morgan Valentin</span>.</footer>
 
 </body>
 
