--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="index.js"></script>
     <meta charset="UTF-8">
     <title>Portail Ephec Upgraded</title>
 </head>
@@ -36,15 +35,22 @@
             <a href="https://www.netacad.com/">
                 <img id="cisco" src="/img/cisco.png" height="120" width="150" /></a>
             <a href="https://itexamanswers.net/ccna-4-v6-0-study-material-chapter-1-wan-concepts.html">
-                <img id="cisco2" src="/img/cisco2.png" height="100" width="200" /></a>
+                <img id="cisco2" src="/img/cisco2.png" height="100" width="250" /></a>
         </fieldset id="field4">
         <fieldset>
             <legend>Formations (internet)</legend>
+            <li><a href="https://www.educative.io/"><span class="special">Educative</span> (Accès 6 mois, <span class="special2">toutes sortes de cours</span>)</a></li>
+            <li><a href="https://frontendmasters.com/"><span class="special">FrontendMasters</span> (Accès 6 mois, <span class="special2">programmation web</span>)</a></li>
+            <li><a href="https://onemonth.com/"><span class="special">OneMonth</span> (1 formation de 1 mois, <span class="special2">python par exemple</span>)</a></li>
         </fieldset>
     </div>
     <div class="div3">
-        <fieldset id="field4">
+        <fieldset id="field5">
             <legend>Liens Utiles</legend>
+            <a href="https://drive.google.com/drive/u/0/folders/0B55ExF9jY7e-eExETmtpOTVwV3M?fbclid=IwAR1miS2yy-4d6iYNf5CVVcBZsOAiERY0QgddJQfnYg07y_UvJjv0Rumnlzc">
+                <img id="drive" src="/img/drive.png" height="200" width="200" /></a>
+            <a href="https://github.com/momo007Dev/">
+                <img id="github" src="/img/github.png" height="200" width="200" /></a>
     </div>
 
     <!--un footer (bas de page)-->
