--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <img id="logo" src="/img/ephec.png" />
         <h2><span class="special">"New"</span> Portail des applications (et autres encore...)</h2>
     </header>
-    <!--div reserver pour le millieur avec une sous div pour centrer-->
     <div class="div1">
         <fieldset id="field1">
             <legend>Cours et administratif</legend>
@@ -52,9 +51,7 @@
             <a href="https://github.com/momo007Dev/">
                 <img id="github" src="/img/github.png" height="200" width="200" /></a>
     </div>
-
-    <!--un footer (bas de page)-->
-    <footer>Site made by <span class="special">Morgan Valentin</span>.</footer>
+    <footer>Site crée par <span class="special">Morgan Valentin</span> (Janvier 2020).</footer>
 
 </body>
 
