--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img id="logo" src="/img/ephec.png" />
+        <img id="logo" src="./img/ephec.png" />
         <h2><span class="special">"New"</span> Portail des applications (et autres encore...)</h2>
     </header>
     <div class="div1">
