bug d'image corriger

--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 
 <body>
     <header>
-        <img id="logo" src="./img/ephec.png" />
+        <img id="logo" src="img/ephec.png" />
         <h2><span class="special">"New"</span> Portail des applications (et autres encore...)</h2>
     </header>
     <div class="div1">
         <fieldset id="field1">
             <legend>Cours et administratif</legend>
             <a href="https://eperso.ephec.be">
-                <img id="eperso" src="/img/eperso.png" height="150" width="250" /></a>
+                <img id="eperso" src="img/eperso.png" height="150" width="250" /></a>
             <a href="https://moodle.ephec.be/">
-                <img id="moodle" src="/img/moodle.png" height="150" width="250" /></a>
+                <img id="moodle" src="img/moodle.png" height="150" width="250" /></a>
         </fieldset id="field2">
         <fieldset>
             <legend>Outils Microsoft</legend>
             <a href="https://outlook.office365.com/owa/?realm=ephec.be#path=/mail">
-                <img id="outlook" src="/img/mail.png" height="150" width="250" /></a>
+                <img id="outlook" src="img/mail.png" height="150" width="250" /></a>
             <a href="https://ephec-my.sharepoint.com/">
-                <img id="onedrive" src="/img/onedrive.png" height="150" width="250" /></a>
+                <img id="onedrive" src="img/onedrive.png" height="150" width="250" /></a>
         </fieldset>
     </div>
     <div class="div2">
         <fieldset id="field3">
             <legend>Réseau</legend>
             <a href="https://www.netacad.com/">
-                <img id="cisco" src="/img/cisco.png" height="120" width="150" /></a>
+                <img id="cisco" src="img/cisco.png" height="120" width="150" /></a>
             <a href="https://itexamanswers.net/ccna-4-v6-0-study-material-chapter-1-wan-concepts.html">
-                <img id="cisco2" src="/img/cisco2.png" height="100" width="250" /></a>
+                <img id="cisco2" src="img/cisco2.png" height="100" width="250" /></a>
         </fieldset id="field4">
         <fieldset>
             <legend>Formations (internet)</legend>
@@ -47,9 +47,9 @@
         <fieldset id="field5">
             <legend>Liens Utiles</legend>
             <a href="https://drive.google.com/drive/u/0/folders/0B55ExF9jY7e-eExETmtpOTVwV3M?fbclid=IwAR1miS2yy-4d6iYNf5CVVcBZsOAiERY0QgddJQfnYg07y_UvJjv0Rumnlzc">
-                <img id="drive" src="/img/drive.png" height="200" width="200" /></a>
+                <img id="drive" src="img/drive.png" height="200" width="200" /></a>
             <a href="https://github.com/momo007Dev/">
-                <img id="github" src="/img/github.png" height="200" width="200" /></a>
+                <img id="github" src="img/github.png" height="200" width="200" /></a>
     </div>
     <footer>Site crée par <span class="special">Morgan Valentin</span> (Janvier 2020).</footer>
 
