ajout d'un icone

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" type="image/png" href="img/icon.png" sizes="32x32" />
     <meta charset="UTF-8">
     <title>Portail Ephec Upgraded</title>
 </head>
