--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <img id="cisco" src="img/cisco.png" height="120" width="150" /></a>
             <a href="https://itexamanswers.net/ccna-4-v6-0-study-material-chapter-1-wan-concepts.html">
                 <img id="cisco2" src="img/cisco2.png" height="100" width="250" /></a>
-        </fieldset id="field4">
-        <fieldset>
+        </fieldset>
+        <fieldset id="field4">
             <legend>Formations (internet)</legend>
             <li><a href="https://www.educative.io/"><span class="special">Educative</span> (Accès 6 mois, <span class="special2">toutes sortes de cours</span>)</a></li>
             <li><a href="https://frontendmasters.com/"><span class="special">FrontendMasters</span> (Accès 6 mois, <span class="special2">programmation web</span>)</a></li>
@@ -47,10 +47,12 @@
     <div class="div3">
         <fieldset id="field5">
             <legend>Liens Utiles</legend>
-            <a href="https://drive.google.com/drive/u/0/folders/0B55ExF9jY7e-eExETmtpOTVwV3M?fbclid=IwAR1miS2yy-4d6iYNf5CVVcBZsOAiERY0QgddJQfnYg07y_UvJjv0Rumnlzc">
-                <img id="drive" src="img/drive.png" height="200" width="200" /></a>
-            <a href="https://github.com/momo007Dev/">
-                <img id="github" src="img/github.png" height="200" width="200" /></a>
+            <li><a href="https://github.com/MMichotte/Projet-SystemAdmin"><span class="special">Projet Admin Reseau</span> (<span class="special2">Github-Martin</span>)</a></li>
+            <li><a href="https://github.com/momo007Dev/Syntheses-Git"><span class="special">Synthèses-Git</span> (<span class="special2">Github</span>)</a></li>
+            <li><a href="https://github.com/danny00747/mean-stack-web-app"><span class="special">Projet Dev Web</span> (<span class="special2">Github-Daniel</span>)</a></li>
+            <li><a href="https://discordapp.com/channels/@me/579738694186172441"><span class="special">Discord-Web</span></a></li>
+            <li><a href="https://aka.ms/mstfw"><span class="special">Teams</span> (<span class="special2">Microsoft-online</span>)</a></li>
+        </fieldset>
     </div>
     <footer>Site crée par <span class="special">Morgan Valentin</span> (Janvier 2020).</footer>
 
