--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="div3">
         <fieldset id="field5">
             <legend>Liens Utiles</legend>
-            <li><a href="https://github.com/MMichotte/Projet-SystemAdmin"><span class="special">Projet Admin Reseau</span> (<span class="special2">Github-Martin</span>)</a></li>
-            <li><a href="https://github.com/momo007Dev/Syntheses-Git"><span class="special">Synthèses-Git</span> (<span class="special2">Github</span>)</a></li>
-            <li><a href="https://github.com/danny00747/mean-stack-web-app"><span class="special">Projet Dev Web</span> (<span class="special2">Github-Daniel</span>)</a></li>
+            <li><a href="https://github.com/MMichotte/Projet-SystemAdmin"><span class="special">Projet Admin Reseau</span></a> <a href="https://trello.com/b/oBXgYLrf/projet-admin-r%C3%A9seau">(<span class="special2">Trello</span>)</a></li>
+            <li><a href="https://github.com/momo007Dev/Syntheses-Git"><span class="special">Synthèses-Git</span></a></li>
+            <li><a href="https://github.com/danny00747/mean-stack-web-app"><span class="special">Projet Dev Web</span></a></li>
             <li><a href="https://discordapp.com/channels/@me/579738694186172441"><span class="special">Discord-Web</span></a></li>
             <li><a href="https://aka.ms/mstfw"><span class="special">Teams</span> (<span class="special2">Microsoft-online</span>)</a></li>
         </fieldset>
